Sms and Phone Working

--- a/BroadcastReceiverNewSms/app/src/main/AndroidManifest.xml
+++ b/BroadcastReceiverNewSms/app/src/main/AndroidManifest.xml
@@ -22,8 +22,11 @@
         <receiver android:name="com.example.root.broadcastreceivernewsms.IncomingSms">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+
+                <action android:name="android.intent.action.PHONE_STATE" />
             </intent-filter>
         </receiver>
+
 
     </application>
     <uses-sdk
@@ -31,9 +34,9 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.RECEIVE_SMS"></uses-permission>
-    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" ></uses-permission>
     <uses-permission android:name="android.permission.SEND_SMS"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" ></uses-permission>
+        <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
 
 </manifest>
