--- a/Push_bullet/app/build.gradle
+++ b/Push_bullet/app/build.gradle
@@ -21,6 +21,8 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:22.1.1'
     compile files('libs/pushbullet_api_v1.jar')
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile files('libs/eventbus-2.4.0-javadoc.jar')
+    compile files('libs/eventbus-2.4.0.jar')
 }
