--- a/Push_bullet/app/src/main/AndroidManifest.xml
+++ b/Push_bullet/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.root.push_bullet" >
 
-    <uses-permission android:name="com.pushbullet.android.permission.READ_MESSAGING_EXTENSION_DATA" />
-    <uses-permission android:name="com.pushbullet.android.permission.SEND_MESSAGES" />
+    <uses-permission android:name="com.example.root.push_bullet.android.permission.READ_MESSAGING_EXTENSION_DATA" />
+    <uses-permission android:name="com.example.root.push_bullet.android.permission.SEND_MESSAGES" />
     <application android:label="@string/app_name">
         <activity android:name=".LaunchActivity">
             <intent-filter>
@@ -13,9 +13,9 @@
         </activity>
         <service
             android:name=".SampleMessagingExtension"
-            android:permission="com.pushbullet.android.permission.READ_MESSAGING_EXTENSION_DATA">
+            android:permission="com.example.root.push_bullet.android.permission.READ_MESSAGING_EXTENSION_DATA">
             <intent-filter>
-                <action android:name="com.pushbullet.android.extension.MessagingExtension" />
+                <action android:name="com.example.root.push_bullet.android.extension.MessagingExtension" />
             </intent-filter>
             <meta-data
                 android:name="protocolVersion"
