--- a/NM/app/src/main/AndroidManifest.xml
+++ b/NM/app/src/main/AndroidManifest.xml
@@ -38,14 +38,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:label="@string/app_name"
-            android:name=".GooglePlacesAutocompleteActivity" >
+            android:name=".GooglePlacesAutocompleteActivity"
+            android:label="@string/app_name" >
         </activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyAqJxrNxRT9hwvR85Q-J657gbWXQOYNad0" />
 
+        <activity
+            android:name=".Booking"
+            android:label="@string/title_activity_main2"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
