--- a/NM/app/src/main/AndroidManifest.xml
+++ b/NM/app/src/main/AndroidManifest.xml
@@ -31,16 +31,24 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".GooglePlacesAutocompleteActivity"
             android:label="@string/app_name" >
         </activity>
+        <activity
+            android:name=".Valley"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
